# VLMs-Alingment-research

./: README.md
spatial-syco/: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
spatial-syco/benchmark/: build_benchmark.py  prompt_conditions.py
spatial-syco/data/: pilot_items.json  test5_items.json
spatial-syco/eval/backends/: hf_local.py  hosted_api.py
