[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-syco"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=1.22.0",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmark*", "eval*", "interp*"]
